{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 9,
  "lineage": "2f5f5594-2099-6469-bfc5-6a207e7582f9",
  "resources": [
    {
      "module": "module.network_fabric-net-firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-admins",
      "each": "list",
      "provider": "provider.google",
      "instances": []
    },
    {
      "module": "module.network_fabric-net-firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-internal",
      "each": "list",
      "provider": "provider.google",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2020-08-22T04:34:57.635-07:00",
            "deny": [],
            "description": "Allow ingress traffic from internal IP ranges",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/poc-sed-shared-jetstream-sb/global/firewalls/myvpc-network-ingress-internal",
            "name": "myvpc-network-ingress-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/poc-sed-shared-jetstream-sb/global/networks/myvpc-network",
            "priority": 1000,
            "project": "poc-sed-shared-jetstream-sb",
            "self_link": "https://www.googleapis.com/compute/v1/projects/poc-sed-shared-jetstream-sb/global/firewalls/myvpc-network-ingress-internal",
            "source_ranges": [
              "10.0.0.0/16"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "dependencies": [
            "module.network.module.vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.network_fabric-net-firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-tag-http",
      "each": "list",
      "provider": "provider.google",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-08-22T04:34:57.992-07:00",
            "deny": [],
            "description": "Allow HTTP to machines with the 'http-server' tag",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/poc-sed-shared-jetstream-sb/global/firewalls/myvpc-network-ingress-tag-http",
            "name": "myvpc-network-ingress-tag-http",
            "network": "https://www.googleapis.com/compute/v1/projects/poc-sed-shared-jetstream-sb/global/networks/myvpc-network",
            "priority": 1000,
            "project": "poc-sed-shared-jetstream-sb",
            "self_link": "https://www.googleapis.com/compute/v1/projects/poc-sed-shared-jetstream-sb/global/firewalls/myvpc-network-ingress-tag-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "http-server"
            ],
            "timeouts": null
          },
          "dependencies": [
            "module.network.module.vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.network_fabric-net-firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-tag-https",
      "each": "list",
      "provider": "provider.google",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-08-22T04:34:58.033-07:00",
            "deny": [],
            "description": "Allow HTTPS to machines with the 'https' tag",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/poc-sed-shared-jetstream-sb/global/firewalls/myvpc-network-ingress-tag-https",
            "name": "myvpc-network-ingress-tag-https",
            "network": "https://www.googleapis.com/compute/v1/projects/poc-sed-shared-jetstream-sb/global/networks/myvpc-network",
            "priority": 1000,
            "project": "poc-sed-shared-jetstream-sb",
            "self_link": "https://www.googleapis.com/compute/v1/projects/poc-sed-shared-jetstream-sb/global/firewalls/myvpc-network-ingress-tag-https",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "https-server"
            ],
            "timeouts": null
          },
          "dependencies": [
            "module.network.module.vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.network_fabric-net-firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-tag-ssh",
      "each": "list",
      "provider": "provider.google",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-08-22T04:34:57.985-07:00",
            "deny": [],
            "description": "Allow SSH to machines with the 'ssh' tag",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/poc-sed-shared-jetstream-sb/global/firewalls/myvpc-network-ingress-tag-ssh",
            "name": "myvpc-network-ingress-tag-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/poc-sed-shared-jetstream-sb/global/networks/myvpc-network",
            "priority": 1000,
            "project": "poc-sed-shared-jetstream-sb",
            "self_link": "https://www.googleapis.com/compute/v1/projects/poc-sed-shared-jetstream-sb/global/firewalls/myvpc-network-ingress-tag-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "ssh"
            ],
            "timeouts": null
          },
          "dependencies": [
            "module.network.module.vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "network",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/poc-sed-shared-jetstream-sb/global/networks/myvpc-network",
            "name": "myvpc-network",
            "project": "poc-sed-shared-jetstream-sb",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/poc-sed-shared-jetstream-sb/global/networks/myvpc-network"
          }
        }
      ]
    },
    {
      "module": "module.network.module.routes",
      "mode": "managed",
      "type": "google_compute_route",
      "name": "route",
      "each": "map",
      "provider": "provider.google",
      "instances": []
    },
    {
      "module": "module.network_routes",
      "mode": "managed",
      "type": "google_compute_route",
      "name": "route",
      "each": "map",
      "provider": "provider.google",
      "instances": [
        {
          "index_key": "egress-internet",
          "schema_version": 0,
          "attributes": {
            "description": "route through IGW to access internet",
            "dest_range": "0.0.0.0/0",
            "id": "projects/poc-sed-shared-jetstream-sb/global/routes/egress-internet",
            "name": "egress-internet",
            "network": "https://www.googleapis.com/compute/v1/projects/poc-sed-shared-jetstream-sb/global/networks/myvpc-network",
            "next_hop_gateway": "https://www.googleapis.com/compute/v1/projects/poc-sed-shared-jetstream-sb/global/gateways/default-internet-gateway",
            "next_hop_ilb": "",
            "next_hop_instance": "",
            "next_hop_instance_zone": null,
            "next_hop_ip": "",
            "next_hop_network": "",
            "next_hop_vpn_tunnel": "",
            "priority": 1000,
            "project": "poc-sed-shared-jetstream-sb",
            "self_link": "https://www.googleapis.com/compute/v1/projects/poc-sed-shared-jetstream-sb/global/routes/egress-internet",
            "tags": [
              "egress-inet"
            ],
            "timeouts": null
          },
          "dependencies": [
            "module.network.module.vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.subnets",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnetwork",
      "each": "map",
      "provider": "provider.google",
      "instances": [
        {
          "index_key": "us-central1/subnet-01",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-08-22T04:34:57.867-07:00",
            "gateway_address": "10.10.10.1",
            "id": "projects/poc-sed-shared-jetstream-sb/regions/us-central1/subnetworks/subnet-01",
            "ip_cidr_range": "10.10.10.0/24",
            "name": "subnet-01",
            "network": "https://www.googleapis.com/compute/v1/projects/poc-sed-shared-jetstream-sb/global/networks/myvpc-network",
            "private_ip_google_access": false,
            "project": "poc-sed-shared-jetstream-sb",
            "region": "us-central1",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "192.168.64.0/24",
                "range_name": "subnet-01-secondary-01"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/poc-sed-shared-jetstream-sb/regions/us-central1/subnetworks/subnet-01"
          },
          "dependencies": [
            "module.network.module.vpc.google_compute_network.network"
          ]
        },
        {
          "index_key": "us-central1/subnet-02",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-08-22T04:34:57.913-07:00",
            "gateway_address": "10.10.20.1",
            "id": "projects/poc-sed-shared-jetstream-sb/regions/us-central1/subnetworks/subnet-02",
            "ip_cidr_range": "10.10.20.0/24",
            "name": "subnet-02",
            "network": "https://www.googleapis.com/compute/v1/projects/poc-sed-shared-jetstream-sb/global/networks/myvpc-network",
            "private_ip_google_access": false,
            "project": "poc-sed-shared-jetstream-sb",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/poc-sed-shared-jetstream-sb/regions/us-central1/subnetworks/subnet-02"
          },
          "dependencies": [
            "module.network.module.vpc.google_compute_network.network"
          ]
        }
      ]
    }
  ]
}